fix(app): set max z-index on app header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
   background: #cfd8dc;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);
   font-size: 2.4rem;
-  z-index: 2;
+  z-index: 5;
 
   h1 {
     display: inline;
